[gd_scene load_steps=6 format=3 uid="uid://dwl8qyprnb8is"]

[ext_resource type="Script" path="res://scenes/color_editor/color_editor.gd" id="1_pcwig"]
[ext_resource type="FontFile" uid="uid://bny6ttbd3ne51" path="res://fonts/sofia_sans_condensed/SofiaSansCondensed-Regular.ttf" id="2_bi8ge"]
[ext_resource type="PackedScene" uid="uid://dl1hwv3q6do0e" path="res://scenes/color_editor/color_strip.tscn" id="2_oesjs"]
[ext_resource type="PackedScene" uid="uid://cuvv0ttrqqef3" path="res://scenes/color_editor/color_handle.tscn" id="5_fqclp"]

[sub_resource type="Theme" id="Theme_e7lmp"]
default_font = ExtResource("2_bi8ge")
default_font_size = 17

[node name="ColorEditor" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pcwig")

[node name="Strips" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HueStrip" parent="Strips" instance=ExtResource("2_oesjs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SaturationStrip" parent="Strips" instance=ExtResource("2_oesjs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 1

[node name="LightnessStrip" parent="Strips" instance=ExtResource("2_oesjs")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
offset_top = -20.0
offset_right = -3.0
grow_horizontal = 0
grow_vertical = 0
theme = SubResource("Theme_e7lmp")
text = "OKHSL"
metadata/keep_anchors = true

[node name="Handles" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HueHandle" parent="Handles" instance=ExtResource("5_fqclp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="SaturationHandle" parent="Handles" instance=ExtResource("5_fqclp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 1

[node name="LightnessHandle" parent="Handles" instance=ExtResource("5_fqclp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
color_param = 2

[connection signal="handle_left_changed" from="Strips/HueStrip" to="Handles/HueHandle" method="set_handle_left"]
[connection signal="handle_left_changed" from="Strips/SaturationStrip" to="Handles/SaturationHandle" method="set_handle_left"]
[connection signal="handle_left_changed" from="Strips/LightnessStrip" to="Handles/LightnessHandle" method="set_handle_left"]
